--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="https://vinay-kumar-2005.github.io/A8-CLASS/#menu">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">MATERIAL</a>
