--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a class="nav-link active" aria-current="page" href="https://vinay-kumar-2005.github.io/A8-CLASS/#menu">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">MATERIAL</a>
+                <a class="nav-link" href="https://vinay-kumar-2005.github.io/MATERIALS-A8/#menu">MATERIAL</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
