--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
           </div>
         </div>
       </nav>
+       <!-- css 3-->
+        <div class="row">
+               
+            <div class="col-md-4">
+        <DIV>
+            <DIV CLASS = "BOX-STYLE">
+               <H1>A8</H1>
+            </DIV>
+            </DIV>
+        </DIV>
+        <div class="col-md-4">
+            <DIV>
+                <DIV CLASS = "BOX-STYLE">
+                   <H1>CSE</H1>
+                </DIV>
+                </DIV>
+            </DIV>
+        <div class="col-md-4">
+            <DIV>
+                <DIV CLASS = "BOX-STYLE">
+                   <H1>A8</H1>
+                </DIV>
+                </DIV>
+        </div>
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
